wxc/include/ewxw/wxc_glue.h

/* wxEncodingConverter */
TClassDefExtend(wxEncodingConverter,wxObject)
void       wxEncodingConverter_Convert( TSelf(wxEncodingConverter) _obj, void* input, void* output );
TClass(wxEncodingConverter) wxEncodingConverter_Create(  );
void       wxEncodingConverter_Delete( TSelf(wxEncodingConverter) _obj );
int        wxEncodingConverter_GetAllEquivalents( TSelf(wxEncodingConverter) _obj, int enc, TClass(wxList) _lst );
int        wxEncodingConverter_GetPlatformEquivalents( TSelf(wxEncodingConverter) _obj, int enc, int platform, TClass(wxList) _lst );
int        wxEncodingConverter_Init( TSelf(wxEncodingConverter) _obj, int input_enc, int output_enc, int method );
TClass(wxFont) wxFont_CreateDefault(  );
void       wxFont_Delete( TSelf(wxFont) _obj );
int        wxFont_GetDefaultEncoding( TSelf(wxFont) _obj );
int        wxFont_GetEncoding( TSelf(wxFont) _obj );
TStringLen wxFont_GetFaceName( TSelf(wxFont) _obj, TStringOutVoid _buf );
int        wxFont_GetFamily( TSelf(wxFont) _obj );
TStringLen wxFont_GetFamilyString( TSelf(wxFont) _obj, TStringOutVoid _buf );
int        wxFont_GetPointSize( TSelf(wxFont) _obj );
int        wxFont_GetStyle( TSelf(wxFont) _obj );
TStringLen wxFont_GetStyleString( TSelf(wxFont) _obj, TStringOutVoid _buf );
int        wxFont_GetUnderlined( TSelf(wxFont) _obj );
int        wxFont_GetWeight( TSelf(wxFont) _obj );
TStringLen wxFont_GetWeightString( TSelf(wxFont) _obj, TStringOutVoid _buf );
TBool      wxFont_Ok( TSelf(wxFont) _obj );
void       wxFont_SetDefaultEncoding( TSelf(wxFont) _obj, int encoding );
void       wxFont_SetEncoding( TSelf(wxFont) _obj, int encoding );
void       wxFont_SetFaceName( TSelf(wxFont) _obj, TString faceName );
void       wxFont_SetFamily( TSelf(wxFont) _obj, int family );
void       wxFont_SetPointSize( TSelf(wxFont) _obj, int pointSize );
void       wxFont_SetStyle( TSelf(wxFont) _obj, int style );
void       wxFont_SetUnderlined( TSelf(wxFont) _obj, int underlined );
void       wxFont_SetWeight( TSelf(wxFont) _obj, int weight );
/* wxFontEnumerator */
TClassDef(wxFontEnumerator)
TClass(wxFontEnumerator) wxFontEnumerator_Create( void* _obj, void* _fnc );
void       wxFontEnumerator_Delete( TSelf(wxFontEnumerator) _obj );
int        wxFontEnumerator_EnumerateEncodings( TSelf(wxFontEnumerator) _obj, TStringVoid facename );
int        wxFontEnumerator_EnumerateFacenames( TSelf(wxFontEnumerator) _obj, int encoding, int fixedWidthOnly );
TStringLen wxFontMapper_GetAltForEncoding( TSelf(wxFontMapper) _obj, int encoding, void* alt_encoding, TStringOutVoid _buf );
TStringLen wxFontMapper_IsEncodingAvailable( TSelf(wxFontMapper) _obj, int encoding, TStringOutVoid _buf );